lhk/ep08-ingress/ingress/ingress-api-todo.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: api-todo
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: api.lahorakubernetes.cf
    http:
      paths:
      - path: /api/v1/todo
        backend:
          serviceName: api-todo
          servicePort: 80
