lhk/ep08-ingress/ingress/ingress-dashboard.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dashboard
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: app.lahorakubernetes.cf
    http:
      paths:
      - path: /
        backend:
          serviceName: dashboard
          servicePort: 80
