lhk/ep08-ingress/ingress/ingress-website.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: website
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: lahorakubernetes.cf
    http:
      paths:
      - path: /
        backend:
          serviceName: website
          servicePort: 80
